# fCWT

./: CITATION.cff  CMakeLists.txt  LICENSE.txt  README.md  README.txt  benchmark.ipynb  fcwtmex.mexmaci64  n2048_t1.wis  n2048_t8.wis  pyproject.toml  setup.py  test.py  tutorial.ipynb
.github/workflows/: ci_test.yml
MATLAB/: example.mlx  fCWT.m  fCWT.mexmaci64  fCWT_create_plan.m  fCWT_create_plan.mexmaci64  n16384_t1.wis  n2048_t1.wis  n4096_t1.wis  n8192_t1.wis
libs/: fftw3f.lib
src/: benchmark.cpp  benchmark.h  fcwt.cpp  fcwt.h  main.cpp  main.h  rwave-bench.cpp  rwave-bench.h  rwave.cpp  wavelib-bench.cpp  wavelib-bench.h  wavelib.cpp  wavelib.h
src/MEX/: fcwtmex.cpp  fcwtplan.cpp
src/benchmark/: README.txt  cwtbench.nb  cwtbench.py  cwtbench.wls
src/fcwt/: __init__.py  api.cpp  api.h  boilerplate.py  fcwt.cpp  fcwt.h  fcwt.i  fcwt.py  fcwt_wrap.cxx  morlet.cpp  morlet.h  numpy.i  scales.cpp  scales.h  wavelet.h
src/fftw/: fftw3.h
src/libwavelib/: wavelib.lib
tests/: test_fcwt.py  test_fcwt.py.bak
